--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 CuiJian.xcodeproj/project.xcworkspace/xcuserdata/Brice.xcuserdatad/UserInterfaceState.xcuserstate
+
+CuiJian/mv2.mp4
+
+CuiJian/mv2.mp4
+
+CuiJian/mv1.mp4
