--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-
 CuiJian.xcodeproj/project.xcworkspace/xcuserdata/Brice.xcuserdatad/UserInterfaceState.xcuserstate
+CuiJian.xcodeproj/xcuserdata/Rick.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+CuiJian/mv2.mp4
+CuiJian/mv1.mp4
