--- a/CuiJian/Info.plist
+++ b/CuiJian/Info.plist
@@ -31,7 +31,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxee47d32e7c23bf21</string>
+				<string>wxca0cdbe9306c44da</string>
 			</array>
 		</dict>
 	</array>
